--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author-img: isaac-kim.jpg # add your photo
+about-author: I am a ios developer focusing on creating New and high end ios app. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: artemsheludko # add your Github handle
@@ -19,7 +19,7 @@ social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
-discus-identifier: Isaac Kim git-Blog # add your discus identifier
+discus-identifier: https-myongkim-github-io # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
